# StartupInvestorMatcher

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/api/: dependencies.py  routes.py  schemas.py
app/core/: __init__.py
app/models/: __init__.py  domain.py
app/services/: __init__.py  catalog_service.py  data_loader.py  embedding_service.py  entity_resolution_service.py  evaluation_service.py  investor_index_service.py  matching_service.py  retrieval_service.py  scoring_service.py
app/utils/: __init__.py
data/examples/: ground_truth.sample.csv  investors.sample.csv  startups.sample.csv
scripts/: build_index.py  generate_synthetic_data.py  run_benchmark.py
tests/: test_api.py  test_data_loader.py  test_embedding_service.py  test_entity_resolution_service.py  test_evaluation_service.py  test_generate_synthetic_data.py  test_investor_index_service.py  test_matching_service.py  test_retrieval_service.py  test_scoring_service.py
